--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
         "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-radio-group": "^1.2.3",
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-tabs": "^1.1.3",
         "@reduxjs/toolkit": "^2.5.0",
         "axios": "^1.7.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
+        "date-fns": "^3.6.0",
         "js-cookie": "^3.0.5",
         "jwt-decode": "^4.0.0",
         "lucide-react": "^0.469.0",
         "next": "15.1.3",
         "next-themes": "^0.4.4",
         "react": "^18.2.0",
+        "react-day-picker": "^8.10.1",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.54.2",
         "react-hot-toast": "^2.5.2",
